src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-82.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units vb=percent\")"
---
items:
  - loc: "#units vb=percent"
    locs:
      directive: "#units"
    options:
      - loc: vb=percent
        locs:
          option: vb
          unit: percent
        option: BacksightInclinationUnit
        unit: Percent
    type: UnitsDirective
