src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-83.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units vb=blargh\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units vb=blargh"
        locs:
          directive: "#units"
        options:
          - INVALID:
              loc: vb=blargh
              locs:
                option: vb
                unit: blargh
              option: BacksightInclinationUnit
              unit: blargh
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EINVALIDINCLINATIONUNIT
    loc: blargh
    message: Invalid inclination unit
    severity: Error
