src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-85.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units decl=\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units decl="
        locs:
          directive: "#units"
        options:
          - INVALID:
              locs:
                option: decl
              option: MagneticDeclination
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EMISSINGVALUE
    loc: ""
    message: Missing azimuth
    severity: Error
