src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-87.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units decl=+2\")"
---
items:
  - loc: "#units decl=+2"
    locs:
      directive: "#units"
    options:
      - declination:
          unit: Degrees
          value: 2
        loc: decl=+2
        locs:
          declination: "+2"
          option: decl
        option: MagneticDeclination
    type: UnitsDirective
