src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-89.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units decl=-2.3\")"
---
items:
  - loc: "#units decl=-2.3"
    locs:
      directive: "#units"
    options:
      - declination:
          unit: Degrees
          value: -2.3
        loc: decl=-2.3
        locs:
          declination: "-2.3"
          option: decl
        option: MagneticDeclination
    type: UnitsDirective
