src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-9.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units order=ddav\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units order=ddav"
        locs:
          directive: "#units"
        options:
          - INVALID:
              loc: order=ddav
              locs:
                option: order
                order: ddav
              option: Order
              order:
                - Distance
                - Distance
                - Azimuth
                - Inclination
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EINVALIDMEASUREMENTORDER
    loc: ddav
    message: Invalid measurement order
    severity: Error
