src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-93.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units a=g decl=2m\")"
---
items:
  - loc: "#units a=g decl=2m"
    locs:
      directive: "#units"
    options:
      - loc: a=g
        locs:
          option: a
          unit: g
        option: FrontsightAzimuthUnit
        unit: Grads
      - declination:
          unit: Mils
          value: 2
        loc: decl=2m
        locs:
          declination: 2m
          option: decl
        option: MagneticDeclination
    type: UnitsDirective
